[project]
name = "pdpc-zeeker"
version = "0.1.0"
description = "Zeeker database project for PDPC enforcement decisions, guidelines, and regulatory materials"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx[socks]>=0.28.1",
    "lxml>=5.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-dotenv>=0.5.2",
    "tenacity>=9.1.2",
    "zeeker>=0.9.0",
]
requires-python = ">=3.12"

[dependency-groups]
dev = ["black>=25.1.0", "ruff>=0.8.0"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
